@@ -1,3 +1,5 @@
+7/7/14 Introduction: left-align radio buttons with reactants box
+7/7/14 Introduction: remove Reset All button from equation-choice control
 7/7/14 rename StartGameLevelNode to LevelSelectionNode, fix constructor name
 7/7/14 use named constructors for subtypes of GamePopupNode
 7/7/14 simplify implementation of GamePopupNode
